manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "tothemoon-3767"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "tothemoon-3767"
  template:
    metadata:
      labels:
        app: "tothemoon-3767"
    spec:
      containers:
        - name: "tothemoon-3767"
          image: "tomoon.azurecr.io/tothemoon"
          ports:
          - containerPort: 80
